sample_cluster/ingress.yml
---
# apiVersion: networking.k8s.io/v1beta1 # for k3s < v1.19
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: default
spec:
  tls:
  - hosts:
    - caddy.balena.local
    secretName: selfsigned-cert
  rules:
  - host: caddy.balena.local
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: caddy
            port:
              name: http
